<resources>
    <string name="app_name">AFaceID-project</string>
    <string name="action_settings">Settings</string>
    <string name="start">start/stop</string>
    <string name="stop">stop</string>
    <string name="send">upload</string>
    <string name="address">address</string>
    <string name="repackage">repackage</string>
    <string name="address_hint">ip address</string>
    <string name="port_hint">port</string>
    <string name="remove">clear</string>
    <string name="connect">connect</string>
    <string name="preference_file_key">userPreference</string>
    <string name="more_files">more</string>
    <string name="show_saved_files">show saved files</string>
    <string name="mic_info_description">Used Microphone information:</string>
    <string name="record_device_description">record device info:</string>
    <string name="debug_area_tile">Debug Infos</string>
    <string name="debug_info_button">debug info</string>
</resources>
