<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">



    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.NoActionBar">
        <androidx.appcompat.widget.ButtonBarLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
            <EditText
                    android:id="@+id/filename_prefix_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="prefix"/>

            <EditText
                    android:id="@+id/filename_medium_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="media"/>
            <EditText
                    android:id="@+id/filename_count_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:hint="count"/>
            <Button
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="next"/>
        </androidx.appcompat.widget.ButtonBarLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Spinner
                    android:id="@+id/audiosource_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/audiosource_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.appcompat.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="69dp">

            <Button
                    android:id="@+id/start_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/start" />

            <Button
                    android:id="@+id/stop_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.0"
                    android:text="@string/stop" />

            <Button
                    android:id="@+id/send_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/send" />

            <Button
                    android:id="@+id/remove_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/remove" />

        </androidx.appcompat.widget.ButtonBarLayout>

        <androidx.appcompat.widget.ButtonBarLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
            <EditText
                    android:id="@+id/ip_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/address_hint"/>
            <EditText
                    android:id="@+id/ip_port_edit_text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:hint="@string/port_hint"/>

        </androidx.appcompat.widget.ButtonBarLayout>
        <Button
                android:id="@+id/connect_button"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/connect"/>
        <androidx.appcompat.widget.ButtonBarLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

            <EditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:hint="description" />

        </androidx.appcompat.widget.ButtonBarLayout>


        <androidx.appcompat.widget.ButtonBarLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
            <Button
                    android:id="@+id/show_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/show_saved_files"/>
        </androidx.appcompat.widget.ButtonBarLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:id="@+id/debug_info_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/debug_info_button" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>